# C-SDL-Snake

./: CMakeLists.txt  LICENSE  Makefile  README.md  Snake
inc/: draw.h  game.h  main.h
src/: draw.c  game.c  main.c
